[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemies/Components/Respawn.gd" type="Script" id=1]
[ext_resource path="res://World/Images/Rock.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="CircleShape2D" id=2]
radius = 100.0

[node name="EnemySpawner" type="YSort"]
script = ExtResource( 1 )
max_enemies = 3

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="SpawnArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnArea"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SpawnedEnemies" type="YSort" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
